# candidate-management-service

./: .env.new-account-template  .gitignore  README-DEPLOYMENT.md  README-HOT-RELOAD.md  README.md  SEARCH_DOCUMENTATION.md  docker-compose.dev.yml  docker-compose.yml  setup-mysql-user.sh
.github/workflows/: backend.yml  deploy-backend.yml  (+2 more)
backend/: .dockerignore  Dockerfile  Dockerfile.dev  jest.config.js  lambda.js  nodemon.json  package-lock.json  package.json  server-export.js  server.js
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  nginx-clean.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
infrastructure/: app.ts  cdk.json  package-lock.json  package.json
scripts/: README.md  check-backend-logs.sh  check-status.sh  deploy-complete.sh  deploy-frontend-s3.sh  deploy-infrastructure.sh  deploy-new-account.sh  deploy-with-ssl.sh  destroy.sh  import-database-simple.sh  import-ecs-fargate.sh  package-lock.json  package.json  setup-ecr.sh  setup-ssl-domain.sh  update-images.sh
services/fastapi-candidates/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/fastapi-candidates/alembic/: env.py
services/fastapi-candidates/alembic/versions/: 001_create_candidates_table.py  002_add_full_candidate_columns.py
services/fastapi-candidates/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  routes.py  routes_internal.py  schemas.py
services/fastapi-candidates/scripts/: seed.py
services/fastapi-candidates/tests/: conftest.py  test_candidates.py
(+23 files in other folders)
